Reverted to message passing only due to performance drop after using FSM.